--- a/conf/nginx.conf
+++ b/conf/nginx.conf
@@ -41,7 +41,7 @@ http {
 
         sendfile off;
 
-        root /var/www/html/web/public;
+        root /var/www/html/public;
         index index.php index.html;
 
         location / {
