container as priviledged user

--- a/conf/php-fpm.conf
+++ b/conf/php-fpm.conf
@@ -21,8 +21,8 @@ listen = 127.0.0.1:9000
 ; Unix user/group of processes
 ; Note: The user is mandatory.
 ;  If the group is not set, the default user's group will be used.
-; user = nginx
-; group = nginx
+user = nginx
+group = nginx
 
 ; Enable status page
 pm.status_path = /fpm-status
